--- a/transcriptomics_analysis_v1.ipynb
+++ b/transcriptomics_analysis_v1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of the astrocytes RNA-seq data from HPT, CTX, and Hippo  "
+    "# Analysis of the sequencing analysis from the ribotag HFD/DREAD astrocytes experiment  "
    ]
   },
   {
